daypicker animation & add theme colors

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -8,5 +8,7 @@ $card-emph-color: #222;
 $card-highlight-color: #666;
 $card-divider-color: #444;
 
-$character-icon-bg: paleturquoise;
-$character-icon-active: palegreen;
+$entity-border-color: #444;
+$entity-default-bg: #888;
+$entity-lighter-bg: #ccc;
+$entity-highlight-color: rgb(0, 195, 221);
