--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -12,3 +12,7 @@ $entity-border-color: #444;
 $entity-default-bg: #888;
 $entity-lighter-bg: #ccc;
 $entity-highlight-color: rgb(0, 195, 221);
+
+body {
+  background-color: #666;
+}
