--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -12,6 +12,10 @@ $entity-border-color: #444;
 $entity-default-bg: #888;
 $entity-lighter-bg: #ccc;
 $entity-highlight-color: rgb(0, 195, 221);
+$entity-highlight-contrast: rgb(0, 134, 158);
+
+$font-family-primary: 'Open Sans', Helvetica, sans-serif;
+$font-family-secondary: 'Montserrat', Helvetica, sans-serif;
 
 body {
   background-color: #666;
