--- a/src/styles/_heading.scss
+++ b/src/styles/_heading.scss
@@ -1,11 +1,13 @@
 @mixin Heading--h2 {
-  font-size: 28px;
+  font-size: 24px;
+  line-height: 28px;
   font-weight: 700;
 }
 
 @mixin Heading--h3 {
+  font-family: $font-family-secondary;
   font-size: 18px;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 @mixin Heading--h4 {
