misc style fixes

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,9 +1,10 @@
-$base-bg-color: #333;
+$base-bg-color: rgb(28, 37, 48);
+$base-bg-light: rgb(43, 52, 63);
 
 $tabs-bg-color: #fff;
 $tabs-hover-color: #aaa;
 
-$card-bg-color: #ddd;
+$card-bg-color: rgb(214, 221, 231);
 $card-emph-color: #222;
 $card-highlight-color: #666;
 $card-divider-color: #444;
